# idp-schedule-provider

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.cfg
docker_scripts/: init.sh
idp_schedule_provider/: config.py  exceptions.py  forecaster.py  main.py  models.py  routes.py
idp_schedule_provider/authentication/: auth.py  routes.py  schemas.py
idp_schedule_provider/forecaster/: controller.py  database.py  exceptions.py  models.py  resampler.py  routes.py  schemas.py
idp_schedule_provider/forecaster/resources/: __init__.py  events_response.md  scenarios_response.md  schedule_response.md  timespan_response.md
idp_schedule_provider/forecaster/seed_data/: DUMMY_SOURCE.py  IEEE123_SOURCE.py  IEEE123_SOURCE_SUPPORTED.py
poetry_scripts/: __init__.py  create_api_docs.py
public/: index.html
schedule_networks/: IEEE123_EXTERNAL_SCHEDULES.xml
tests/: conftest.py  test_dummy.py
tests/compliance/: conftest.py  test_authorization_compliance.py  test_event_timespan_compliance.py  test_events_compliance.py  test_scenario_compliance.py  test_schedule_compliance.py  test_schedule_timespan_compliance.py  test_timespan_compliance.py
tests/test_helpers/: test_helper_endpoints.py  test_helper_funcs.py
