[tool.poetry]
name = "idp-schedule-provider"
version = "0.1.0"
description = "A service implementing IDPs external schedule provider APIs"
authors = ["Opus One Solutions <rnd@opusonesolutions.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
fastapi = {extras = ["all"], version = "^0.65.1"}
uvicorn = {extras = ["standard"], version = "^0.13.4"}
PyJWT = "^2.1.0"
SQLAlchemy = "^1.4.15"
python-dateutil = "^2.8.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version="==21.*", allow-prereleases = true}
isort = "==5.*"
mypy = "^0.902"
flake8 = "==3.*"
pytest = "==6.*"
sqlalchemy-stubs = "^0.4"
bandit = "^1.7.0"
types-python-dateutil = "^0.1.3"

[tool.poetry.scripts]
create_api_docs = "poetry_scripts:create_docs"

[tool.isort]
src_paths=["idp_schedule_provider", "tests"]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
target-version = ['py37', 'py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
